--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -7,4 +7,7 @@ $red: #ec5863;
 $black: #000000;
 $white: #fcfdfe;
 $blue: #4285f4;
+$darkgrey: #616161;
+$whiteBg: #fafbfd;
+$grey: #b0b0b0;
 $transition: all 0.5s ease-in;
