--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,5 @@
 @import "./components/reset";
 @import "./components/reusables";
 @import "./components/header";
+@import "./components/mainSection";
+@import "./components//safeSection";
