--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -12,6 +12,8 @@ html {
 
 body {
 	font-family: $rubik;
+	background: $whiteBg;
+	overflow-x: hidden;
 }
 
 a {
@@ -34,10 +36,31 @@ button {
 	font-family: $raleway;
 	font-weight: 800;
 	font-size: 1.2rem;
+	cursor: pointer;
 }
 
 p {
 	font-size: 1.2rem;
+	color: $darkgrey;
+}
+
+h1 {
+	font-size: 3.4rem;
+	font-weight: bold;
+	color: $black;
+
+	span {
+		color: $blue;
+	}
+}
+
+h2 {
+	font-size: 3rem;
+	font-weight: bold;
+
+	span {
+		color: $red;
+	}
 }
 
 img {
