--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
 @import "./components/variables";
 @import "./components/reset";
 @import "./components/reusables";
+@import "./components/rectangles";
 @import "./components/header";
 @import "./components/mainSection";
-@import "./components//safeSection";
+@import "./components/safeSection";
+@import "./components/expertSection";
+@import "./components/healthcareSection";
+@import "./components/footer";
