--- a/scss/components/_safeSection.scss
+++ b/scss/components/_safeSection.scss
@@ -1,41 +1,52 @@
 .safe {
+	background: #ffffff;
 	.safe__container {
 		.app-img__container {
 			justify-self: center;
 			position: relative;
+			z-index: 5;
 
-			.square {
-				position: absolute;
-				width: 77px;
-				height: 77px;
-				border-radius: 30px;
-				background: $red;
-				z-index: -1;
-
+			.rectangle {
 				&.big {
 					top: 0;
-					left: -30%;
-					width: 147px;
-					height: 147px;
+					left: -7%;
 				}
 
 				&:nth-of-type(2) {
 					bottom: 10%;
-					left: -50%;
+					left: -9%;
 				}
 
 				&:nth-of-type(3) {
 					bottom: 50%;
-					right: -50%;
+					right: 0;
+				}
+
+				@media screen and (min-width: 1200px) {
+					&.big {
+						top: 0;
+						left: -10%;
+					}
+
+					&:nth-of-type(2) {
+						bottom: 3%;
+						left: 0;
+					}
+
+					&:nth-of-type(3) {
+						bottom: 30%;
+						right: 0;
+					}
 				}
 			}
 
 			img {
-				width: 150px;
+				max-width: 330px;
 			}
 		}
 
 		.safe__info {
+			max-width: 45rem;
 			.info__container {
 				p {
 					margin-top: 1rem;
