--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,7 +7,8 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 
 body {
   font-family: "Rubik", sans-serif;
@@ -33,7 +34,8 @@ button {
   font-weight: 800;
   font-size: 1rem;
   cursor: pointer;
-  letter-spacing: 0.14rem; }
+  letter-spacing: 0.14rem;
+  transition: all 0.3s ease-in; }
 
 p {
   font-size: 1.2rem;
@@ -56,6 +58,16 @@ img {
   max-width: 100%;
   height: auto; }
 
+@media screen and (min-width: 767px) {
+  h1 {
+    font-size: 4.4rem;
+    line-height: 126%; }
+  p {
+    font-size: 1.2rem;
+    line-height: 138.5%; }
+  h2 {
+    font-size: 4.4rem; } }
+
 @media screen and (min-width: 1200px) {
   h1 {
     font-size: 8.4rem;
@@ -71,6 +83,12 @@ img {
   padding: 5rem 2rem; }
   .section.main {
     padding: 2rem 2rem; }
+
+@media screen and (min-width: 767px) {
+  .section {
+    padding: 5rem 5rem; }
+    .section.main {
+      padding: 5rem 5rem; } }
 
 @media screen and (min-width: 1200px) {
   .section {
@@ -88,10 +106,20 @@ img {
       grid-template-columns: 1fr 1fr; } }
 
 .btn__blue {
-  background: #4285f4; }
+  background: #4285f4;
+  border: 1px solid transparent; }
+  .btn__blue:hover {
+    background: #fcfdfe;
+    color: #4285f4;
+    border: 1px solid #4285f4; }
 
 .btn__red {
-  background: #ec5863; }
+  background: #ec5863;
+  border: 1px solid transparent; }
+  .btn__red:hover {
+    background: #fcfdfe;
+    color: #ec5863;
+    border: 1px solid #ec5863; }
 
 .rectangle {
   position: absolute;
@@ -174,6 +202,10 @@ header {
     display: flex;
     justify-content: space-between;
     flex-basis: 70%; }
+    header nav .logo__container a img {
+      transition: all 0.5s ease-in; }
+    header nav .logo__container a:hover > img {
+      transform: scale(1.2); }
     header nav .nav__menu {
       position: fixed;
       top: 10rem;
@@ -217,6 +249,22 @@ header {
           font-size: 1.2rem;
           text-transform: uppercase;
           letter-spacing: 0.14rem; }
+          header nav .nav__menu .nav__list .nav__item a {
+            position: relative; }
+            header nav .nav__menu .nav__list .nav__item a::after {
+              content: "";
+              position: absolute;
+              bottom: -30%;
+              left: 0;
+              width: 100%;
+              height: 3px;
+              background: #000000;
+              transform: scaleX(0);
+              transform-origin: right;
+              transition: transform 0.3s ease-in; }
+            header nav .nav__menu .nav__list .nav__item a:hover::after {
+              transform: scaleX(1);
+              transform-origin: left; }
 
 .main {
   margin-top: 10rem;
@@ -244,6 +292,12 @@ header {
         font-size: 1rem;
         letter-spacing: 0.1rem; }
 
+@media screen and (min-width: 481px) {
+  .main__container {
+    grid-template-columns: 1fr 1fr; }
+    .main__container .img__container {
+      order: 1; } }
+
 .main__container .main__info p {
   margin-top: 1rem; }
 
@@ -255,10 +309,9 @@ header {
   z-index: 10; }
   .main__container .img__container svg {
     max-width: 75rem; }
-
-@media screen and (min-width: 1200px) {
-  .main__container .img__container {
-    order: 1; } }
+    @media screen and (max-width: 1199px) {
+      .main__container .img__container svg {
+        max-width: 54rem; } }
 
 .safe {
   background: #ffffff; }
@@ -298,6 +351,9 @@ header {
   grid-template-columns: 1fr;
   align-content: space-between;
   min-height: 85vh; }
+  @media screen and (min-width: 1200px) {
+    .experts .experts__container {
+      align-content: space-around; } }
   .experts .experts__container .statistics {
     justify-self: center;
     position: relative;
@@ -402,7 +458,7 @@ header {
     align-items: center;
     width: 100%;
     min-height: 50vh; }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 767px) {
       .healthcare__cards {
         flex-direction: row;
         justify-content: space-evenly; } }
@@ -432,3 +488,7 @@ header {
     justify-content: center;
     align-items: center;
     gap: 5.6rem; }
+    .footer .download__btn a img {
+      transition: all 0.5s ease-in; }
+    .footer .download__btn a:hover > img {
+      transform: scale(1.1); }
