--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -7,5 +7,15 @@
 		justify-content: center;
 		align-items: center;
 		gap: 5.6rem;
+
+		a {
+			img {
+				transition: $transition;
+			}
+
+			&:hover > img {
+				transform: scale(1.1);
+			}
+		}
 	}
 }
