--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -8,6 +8,7 @@
 
 html {
 	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
 
 body {
@@ -38,6 +39,7 @@ button {
 	font-size: 1rem;
 	cursor: pointer;
 	letter-spacing: 0.14rem;
+	transition: all 0.3s ease-in;
 }
 
 p {
@@ -67,6 +69,22 @@ h2 {
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+@media screen and (min-width: 767px) {
+	h1 {
+		font-size: 4.4rem;
+		line-height: 126%;
+	}
+
+	p {
+		font-size: 1.2rem;
+		line-height: 138.5%;
+	}
+
+	h2 {
+		font-size: 4.4rem;
+	}
 }
 
 @media screen and (min-width: 1200px) {
