--- a/scss/components/_reusables.scss
+++ b/scss/components/_reusables.scss
@@ -6,6 +6,15 @@
 	}
 }
 
+@media screen and (min-width: 767px) {
+	.section {
+		padding: 5rem 5rem;
+		&.main {
+			padding: 5rem 5rem;
+		}
+	}
+}
+
 @media screen and (min-width: 1200px) {
 	.section {
 		padding: 8rem 10rem;
@@ -30,8 +39,22 @@
 
 .btn__blue {
 	background: $blue;
+	border: 1px solid transparent;
+
+	&:hover {
+		background: $white;
+		color: $blue;
+		border: 1px solid $blue;
+	}
 }
 
 .btn__red {
 	background: $red;
+	border: 1px solid transparent;
+
+	&:hover {
+		background: $white;
+		color: $red;
+		border: 1px solid $red;
+	}
 }
